@@ -48,6 +48,13 @@
     <li>[Bugfix] Retry transfer for 421 error reply from server with a delay (FTP) (<a
             href="https://trac.cyberduck.io/ticket/9368">#9368</a>)
     </li>
+    <li>[Bugfix] No prompt for importing WinSCP bookmarks (Windows) (<a
+            href="https://trac.cyberduck.io/ticket/9208">#9208</a>)
+    </li>
+    <li>[Bugfix] Signature mismatch for presigned URLs with AWS4 signing (S3) (<a
+            href="https://trac.cyberduck.io/ticket/9317">#9317</a>, <a
+            href="https://trac.cyberduck.io/ticket/9479">#9479</a>)
+    </li>
 </ul>
 
 <p>
